# tai-helper

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  keepalive.yml
data/: assistant_notes.json  discovered_urls.json  towardsai_com_pages.json
scripts/: build_towardsai_com_catalog.py
static/: widget.js
tai_helper/: __init__.py  api.py  catalog.py  llm.py  monitoring.py  rate_limiter.py  schemas.py  settings.py
tests/: conftest.py  test_api.py  test_catalog.py  test_live_smoke.py  test_llm.py
